--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.mywallet" >
+    package="com.example.mywallet">
 
     <application
         android:allowBackup="true"
@@ -10,10 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyWallet"
-        tools:ignore="ExtraText" >
-        <activity android:name=".Credit" >
-        </activity>
-        <activity android:name=".MainActivity" >
+        tools:ignore="ExtraText">
+        <activity android:name=".debit"></activity>
+        <activity android:name=".Credit"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
